# qvio-mods

./: .gitignore  GEMINI.md  Makefile  README.md
modules/include/: sleep.h  xdebug.h  xil_io.h  xparameters.h
modules/qdmabuf/: Makefile  cdev.c  config.h  device.c  ioctl.c  module.c  qdmabuf.dts
modules/qvio-l4t/: Makefile  buf_entry.c  buf_entry.h  cdev.c  cdev.h  device.c  device.h  dma_block.c  dma_block.h  module.c  pci_device.c  pci_device.h  pci_device_7024.c  pci_device_7024.h  pci_device_e382.c  pci_device_e382.h  platform_device.c  platform_device.h  qdma_rd.c  qdma_rd.h  qdma_wr.c  qdma_wr.h  queue.c  queue.h  qvio.dts  tpg.c  tpg.h  umods.c  umods.h  utils.c  utils.h  video.c  video.h  video_queue.c  video_queue.h  xdma_desc.h  xdma_rd.c  xdma_rd.h  xdma_wr.c  xdma_wr.h  (+2 more)
modules/qvio-l4t/uapi/: qvio-l4t.h  qvio.h
modules/vitis/aximm_test0_v1_0/data/: aximm_test0.mdd  aximm_test0.tcl  aximm_test0.yaml
modules/vitis/aximm_test0_v1_0/src/: CMakeLists.txt  Makefile  xaximm_test0.c  xaximm_test0.h  xaximm_test0_hw.h  xaximm_test0_linux.c  xaximm_test0_sinit.c
modules/vitis/aximm_test1_v1_0/data/: aximm_test1.mdd  aximm_test1.tcl  aximm_test1.yaml
modules/vitis/aximm_test1_v1_0/src/: CMakeLists.txt  Makefile  xaximm_test1.c  xaximm_test1.h  xaximm_test1_hw.h  xaximm_test1_linux.c  xaximm_test1_sinit.c
modules/vitis/v_tpg_v8_3/src/: xv_tpg.c  xv_tpg.h  xv_tpg_g.c  xv_tpg_sinit.c
modules/vitis/video_common_v4_10/src/: xvidc.h  xvidc_cea861.h  xvidc_edid_ext.h  xvidc_parse_edid.c  xvidc_timings_table.c
modules/vitis/z_frmbuf_writer_v1_0/data/: z_frmbuf_writer.mdd  z_frmbuf_writer.tcl  z_frmbuf_writer.yaml
modules/vitis/z_frmbuf_writer_v1_0/src/: CMakeLists.txt  Makefile  xz_frmbuf_writer.c  xz_frmbuf_writer.h  xz_frmbuf_writer_hw.h  xz_frmbuf_writer_linux.c  xz_frmbuf_writer_sinit.c
samples/: Rules.mk
samples/02_qdmabuf-ctl/: main.cpp
samples/03_qvio-ctl/: Makefile
samples/06_aximm-test1/: .gitignore  Makefile  main.cpp
samples/07_aximm-test0/: .gitignore  Makefile  main.cpp
samples/08_frmbufwr/: .gitignore  Makefile  main.cpp
samples/09_aximm-test2/: .gitignore  Makefile  main.cpp
samples/10_qdma/: .gitignore  Makefile  main.cpp
samples/11_tpg/: .gitignore  Makefile  main.cpp
samples/common/: ZzUtils.cpp  ZzUtils.h  qdmabuf.h  qvio-l4t.h
